# library-management-system

./: .gitignore
.github/workflows/: build.yaml  test_server.yaml
server/: .dockerignore  .env.template  .env.testing  Dockerfile  docker-compose.yaml  pyproject.toml
server/migrations/: env.py
server/migrations/versions/: 2025-12-24-0153_initial_schema.py
server/scripts/: db.py
server/source/: api.py  app.py  config.py  exception_handlers.py  exceptions.py  logging.py  middlewares.py  postgres.py
server/source/author/: endpoints.py  repository.py  schemas.py  service.py
server/source/health/: endpoints.py
server/source/kit/: pagination.py  schemas.py  services.py
server/source/kit/db/: postgres.py
server/source/kit/db/models/: base.py
server/source/kit/repository/: base.py
server/source/models/: __init__.py  author.py  author_book.py  book.py  borrowing.py  genre.py  genre_book.py  inventory.py  publisher.py  user.py
server/tests/: conftest.py
server/tests/author/: test_service.py
server/tests/fixtures/: __init__.py  base.py  database.py  random_objects.py
