[project]
name = "librarymanagement"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "ecs-logging>=2.2.0",
    "fastapi>=0.116.1",
    "pydantic-settings>=2.11.0",
    "pydantic>=2.11.7",
    "uvicorn>=0.35.0",
    "taskipy>=1.14.1",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.43",
    "structlog>=25.4.0",
    "psycopg2-binary>=2.9.10",
    "httpx>=0.28.1",
    "alembic-utils>=0.8.8",
]

[dependency-groups]
dev = [
    "coverage>=7.13.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-sugar>=1.1.1",
    "pytest-xdist[psutil]>=3.8.0",
    "ruff>=0.12.12",
    "sqlalchemy-utils>=0.42.1",
    "typer>=0.21.0",
]

[tool.taskipy.tasks]
api = { cmd = "uvicorn source.app:app --reload --workers 1 --host 127.0.0.1 --port 8000", help = "run api service" }
test = { cmd = "ENV=testing python -m pytest --cov source/ --cov-report=term-missing", help = "run all tests" }
test_fast = { cmd = "ENV=testing python -m pytest -n auto -p no:sugar --no-cov", help = "run all tests, but fast" }
lint = { cmd = "ruff format . && ruff check --fix .", help = "run linters with autofix" }
lint_check = { cmd = "ruff format --check . && ruff check .", help = "run ruff linter" }
lint_types = { cmd = "mypy source tests", help = "run mypy type verify" }
db_migrate = { cmd = "python -m scripts.db upgrade", help = "run alembic upgrade" }

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I", "UP", "T20", "B039"]
ignore = [
  "F841",  # remove unused variables
  "UP040", # new type alias syntax not supported by mypy yet
]

[tool.ruff.lint.per-file-ignores]
"migrations/*" = [
  "F401", # remove unused import
]
"scripts/*" = ["T20"]
